@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.playitx" name="PlayIt" version="0.4.2"
+<addon id="service.playitx" name="PlayIt" version="0.4.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex" version="1.6.6" />
+		<import addon="script.module.turtlex" version="1.6.7" />
 	</requires>
 	<extension point="xbmc.service" library="TurtleMain.py"
 		start="login">
